--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,14 @@
 [submodule "libtremotesf/libtremotesf"]
 	path = libtremotesf/src/main/cpp/libtremotesf
-	url = https://github.com/equeim/libtremotesf
-
+	url = https://github.com/equeim/libtremotesf.git
 [submodule "bencode"]
 	path = bencode
-	url = https://github.com/equeim/kotlinx-serialization-bencode
+	url = https://github.com/equeim/kotlinx-serialization-bencode.git
 [submodule "3rdparty/qt/qtbase"]
 	path = 3rdparty/qt/qtbase
 	url = https://invent.kde.org/qt/qt/qtbase.git
 	branch = kde/5.15
+	shallow = true
 [submodule "3rdparty/openssl/openssl"]
 	path = 3rdparty/openssl/openssl
 	url = git://git.openssl.org/openssl.git
